# dotfiles

./: .ansible-lint  .gitattributes  .gitignore  .travis.yml  .yamllint.yaml  README.md  ansible.cfg  homelab.yaml  hosts  laptop.yaml  pc.yml  pyproject.toml  remote.yaml  remote.yml  travis.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
environments/: defaults.yml
environments/production/: hosts
group_vars/: all.yml
group_vars/all/: backup.yaml  colors.yaml  defaults.yaml  main.yaml  network.yaml  packages.yaml  vars_defaults.yml  vault.yaml  vault.yml
group_vars/media_servers/: main.yaml  vault.yaml
group_vars/personal_computer/: vault_gpg.yml
group_vars/remote/: main.yaml
group_vars/seedboxes/: main.yaml  vault.yaml
host_vars/: aubergine.yaml  jorenLaptop.yml  jorenPC.yml  lilo.science.ru.nl.yaml  lilo5.yml  peen.yaml  pompoen.yaml
host_vars/druif/: backups.yaml  main.yaml  packages.yaml  vault.yaml
host_vars/jorenLaptop/: vault_user.yml
host_vars/jorenPC/: vault_ssh.yml  vault_user.yml
host_vars/lilo/: vault_user.yml
host_vars/lilo.science.ru.nl/: main.yaml
host_vars/peen/: backups.yaml  main.yaml  vault.yaml
roles/backups/defaults/: main.yaml
roles/backups/files/: exclude.txt
roles/backups/tasks/: main.yaml
roles/backups/templates/: backup.sh.j2
roles/backups/vars/: main.yaml
roles/common/files/: lid.conf
roles/common/tasks/: main.yaml
roles/dnsmasq/tasks/: main.yaml
roles/dnsmasq/templates/: dnsmasq.conf.j2
roles/docker/tasks/: main.yaml  setup-user.yaml  (+1 more)
vars/: placeholder_vault.yml  vault.yml
(+154 files in other folders)
