[tool.poetry]
name = "dotfiles"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
ansible-lint = { version = "^24.9.2", markers = "platform_system != 'Windows'" }
yamllint = "^1.35.1"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "D100",
    "D203",
    "D212",
    "COM812",
    "ISC001",
    "S113",
    "T201",
    "TRY301",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
