[project]
name = "dotfiles"
version = "1.0.0"
description = "Dotfiles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.6.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.5.0",
    "ruff>=0.11.12",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "D100",
    "D203",
    "D212",
    "COM812",
    "ISC001",
    "S113",
    "T201",
    "TRY301",
]
